--- a/src/styles/style_header.css
+++ b/src/styles/style_header.css
@@ -3,7 +3,6 @@ header {
     padding-bottom: 10px;
     padding-right: 6%;
     padding-left: 6%;
-    margin-right: 0px;
     height: 40px;
     background: #f6f6f6;
     box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.075);
@@ -85,7 +84,6 @@ body {
 @media only screen and (min-width: 768px) {
     header.flex_MH {
         justify-content: space-between;
-        margin-right: 16px;
     }
     div.flex_name {
         display: flex;
