--- a/src/styles/style_scroll.css
+++ b/src/styles/style_scroll.css
@@ -1,5 +1,5 @@
 *::-webkit-scrollbar {
-    background: #f6f6f6;
+    background: #eeeeee;
     width: 16px;
 }
 
